hphp/hack/test/typecheck/reified_generics/type_constants_multilevel.php.exp
File "type_constants_multilevel.php", line 9, characters 10-21:
Invalid `as` expression hint (Typing[4195])
  File "type_constants_multilevel.php", line 24, characters 23-24:
  The `as` operator cannot be used with the abstract type constant Tx because it is not marked `<<__Enforceable>>`
File "type_constants_multilevel.php", line 11, characters 10-21:
Invalid `as` expression hint (Typing[4195])
  File "type_constants_multilevel.php", line 26, characters 19-24:
  The `as` operator cannot be used with a type with an erased generic type argument
File "type_constants_multilevel.php", line 17, characters 10-21:
Invalid `as` expression hint (Typing[4195])
  File "type_constants_multilevel.php", line 31, characters 19-24:
  The `as` operator cannot be used with a type with an erased generic type argument
File "type_constants_multilevel.php", line 19, characters 10-21:
Invalid `as` expression hint (Typing[4195])
  File "type_constants_multilevel.php", line 26, characters 19-24:
  The `as` operator cannot be used with a type with an erased generic type argument
